// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should invert legend 1`] = `
<div>
  <EuiFlexGroup
    gutterSize="xs"
    justifyContent="spaceBetween"
  >
    <EuiFlexItem
      grow={false}
    >
      <EuiToolTip
        content="bytes"
        delay="regular"
        disableScreenReaderOutput={false}
        display="inlineBlock"
        position="top"
        title="Symbol size"
      >
        <EuiText
          className="eui-textTruncate"
          size="xs"
          style={
            Object {
              "maxWidth": "180px",
            }
          }
        >
          <small>
            <strong>
              bytes
            </strong>
          </small>
        </EuiText>
      </EuiToolTip>
    </EuiFlexItem>
  </EuiFlexGroup>
  <svg
    height={55}
    xmlns="http://www.w3.org/2000/svg"
  >
    <MapMarker
      circleCenterX={25}
      circleCenterY={47}
      circleStyle={
        Object {
          "fillOpacity": 0,
          "strokeWidth": 1,
        }
      }
      circleTopY={40}
      formattedValue="19KB"
      onWidthChange={[Function]}
      radius={7}
      textOffset={5}
      textY={45}
    />
    <MapMarker
      circleCenterX={25}
      circleCenterY={38.5}
      circleStyle={
        Object {
          "fillOpacity": 0,
          "strokeWidth": 1,
        }
      }
      circleTopY={23}
      formattedValue="14.25KB"
      onWidthChange={[Function]}
      radius={15.5}
      textOffset={5}
      textY={28}
    />
    <MapMarker
      circleCenterX={25}
      circleCenterY={30}
      circleStyle={
        Object {
          "fillOpacity": 0,
          "strokeWidth": 1,
        }
      }
      circleTopY={6}
      formattedValue="0KB"
      onWidthChange={[Function]}
      radius={24}
      textOffset={5}
      textY={11}
    />
  </svg>
</div>
`;

exports[`Should render legend 1`] = `
<div>
  <EuiFlexGroup
    gutterSize="xs"
    justifyContent="spaceBetween"
  >
    <EuiFlexItem
      grow={false}
    >
      <EuiToolTip
        content="bytes"
        delay="regular"
        disableScreenReaderOutput={false}
        display="inlineBlock"
        position="top"
        title="Symbol size"
      >
        <EuiText
          className="eui-textTruncate"
          size="xs"
          style={
            Object {
              "maxWidth": "180px",
            }
          }
        >
          <small>
            <strong>
              bytes
            </strong>
          </small>
        </EuiText>
      </EuiToolTip>
    </EuiFlexItem>
  </EuiFlexGroup>
  <svg
    height={71}
    xmlns="http://www.w3.org/2000/svg"
  >
    <MapMarker
      circleCenterX={33}
      circleCenterY={63}
      circleStyle={
        Object {
          "fillOpacity": 0,
          "strokeWidth": 1,
        }
      }
      circleTopY={56}
      formattedValue="0KB"
      onWidthChange={[Function]}
      radius={7}
      textOffset={5}
      textY={61}
    />
    <MapMarker
      circleCenterX={33}
      circleCenterY={56.75}
      circleStyle={
        Object {
          "fillOpacity": 0,
          "strokeWidth": 1,
        }
      }
      circleTopY={43.5}
      formattedValue="1.188KB"
      onWidthChange={[Function]}
      radius={13.25}
      textOffset={5}
      textY={48.5}
    />
    <MapMarker
      circleCenterX={33}
      circleCenterY={50.5}
      circleStyle={
        Object {
          "fillOpacity": 0,
          "strokeWidth": 1,
        }
      }
      circleTopY={31}
      formattedValue="4.75KB"
      onWidthChange={[Function]}
      radius={19.5}
      textOffset={5}
      textY={36}
    />
    <MapMarker
      circleCenterX={33}
      circleCenterY={44.25}
      circleStyle={
        Object {
          "fillOpacity": 0,
          "strokeWidth": 1,
        }
      }
      circleTopY={18.5}
      formattedValue="10.688KB"
      onWidthChange={[Function]}
      radius={25.75}
      textOffset={5}
      textY={23.5}
    />
    <MapMarker
      circleCenterX={33}
      circleCenterY={38}
      circleStyle={
        Object {
          "fillOpacity": 0,
          "strokeWidth": 1,
        }
      }
      circleTopY={6}
      formattedValue="19KB"
      onWidthChange={[Function]}
      radius={32}
      textOffset={5}
      textY={11}
    />
  </svg>
</div>
`;

exports[`Should render legend with 2 markers when size difference does not provide enough vertical space for more labels 1`] = `
<div>
  <EuiFlexGroup
    gutterSize="xs"
    justifyContent="spaceBetween"
  >
    <EuiFlexItem
      grow={false}
    >
      <EuiToolTip
        content="bytes"
        delay="regular"
        disableScreenReaderOutput={false}
        display="inlineBlock"
        position="top"
        title="Symbol size"
      >
        <EuiText
          className="eui-textTruncate"
          size="xs"
          style={
            Object {
              "maxWidth": "180px",
            }
          }
        >
          <small>
            <strong>
              bytes
            </strong>
          </small>
        </EuiText>
      </EuiToolTip>
    </EuiFlexItem>
  </EuiFlexGroup>
  <svg
    height={37}
    xmlns="http://www.w3.org/2000/svg"
  >
    <MapMarker
      circleCenterX={16}
      circleCenterY={29}
      circleStyle={
        Object {
          "fillOpacity": 0,
          "strokeWidth": 1,
        }
      }
      circleTopY={22}
      formattedValue="0KB"
      onWidthChange={[Function]}
      radius={7}
      textOffset={5}
      textY={27}
    />
    <MapMarker
      circleCenterX={16}
      circleCenterY={21}
      circleStyle={
        Object {
          "fillOpacity": 0,
          "strokeWidth": 1,
        }
      }
      circleTopY={6}
      formattedValue="19KB"
      onWidthChange={[Function]}
      radius={15}
      textOffset={5}
      textY={11}
    />
  </svg>
</div>
`;

exports[`Should render legend with 3 markers when size difference does not provide enough vertical space for more labels 1`] = `
<div>
  <EuiFlexGroup
    gutterSize="xs"
    justifyContent="spaceBetween"
  >
    <EuiFlexItem
      grow={false}
    >
      <EuiToolTip
        content="bytes"
        delay="regular"
        disableScreenReaderOutput={false}
        display="inlineBlock"
        position="top"
        title="Symbol size"
      >
        <EuiText
          className="eui-textTruncate"
          size="xs"
          style={
            Object {
              "maxWidth": "180px",
            }
          }
        >
          <small>
            <strong>
              bytes
            </strong>
          </small>
        </EuiText>
      </EuiToolTip>
    </EuiFlexItem>
  </EuiFlexGroup>
  <svg
    height={55}
    xmlns="http://www.w3.org/2000/svg"
  >
    <MapMarker
      circleCenterX={25}
      circleCenterY={47}
      circleStyle={
        Object {
          "fillOpacity": 0,
          "strokeWidth": 1,
        }
      }
      circleTopY={40}
      formattedValue="0KB"
      onWidthChange={[Function]}
      radius={7}
      textOffset={5}
      textY={45}
    />
    <MapMarker
      circleCenterX={25}
      circleCenterY={38.5}
      circleStyle={
        Object {
          "fillOpacity": 0,
          "strokeWidth": 1,
        }
      }
      circleTopY={23}
      formattedValue="4.75KB"
      onWidthChange={[Function]}
      radius={15.5}
      textOffset={5}
      textY={28}
    />
    <MapMarker
      circleCenterX={25}
      circleCenterY={30}
      circleStyle={
        Object {
          "fillOpacity": 0,
          "strokeWidth": 1,
        }
      }
      circleTopY={6}
      formattedValue="19KB"
      onWidthChange={[Function]}
      radius={24}
      textOffset={5}
      textY={11}
    />
  </svg>
</div>
`;

exports[`Should render legend with only max marker when size difference does not provide enough vertical space for more labels 1`] = `
<div>
  <EuiFlexGroup
    gutterSize="xs"
    justifyContent="spaceBetween"
  >
    <EuiFlexItem
      grow={false}
    >
      <EuiToolTip
        content="bytes"
        delay="regular"
        disableScreenReaderOutput={false}
        display="inlineBlock"
        position="top"
        title="Symbol size"
      >
        <EuiText
          className="eui-textTruncate"
          size="xs"
          style={
            Object {
              "maxWidth": "180px",
            }
          }
        >
          <small>
            <strong>
              bytes
            </strong>
          </small>
        </EuiText>
      </EuiToolTip>
    </EuiFlexItem>
  </EuiFlexGroup>
  <svg
    height={29}
    xmlns="http://www.w3.org/2000/svg"
  >
    <MapMarker
      circleCenterX={12}
      circleCenterY={17}
      circleStyle={
        Object {
          "fillOpacity": 0,
          "strokeWidth": 1,
        }
      }
      circleTopY={6}
      formattedValue="19KB"
      onWidthChange={[Function]}
      radius={11}
      textOffset={5}
      textY={11}
    />
  </svg>
</div>
`;

exports[`Should render legend without label cutoff when min size is 1 1`] = `
<div>
  <EuiFlexGroup
    gutterSize="xs"
    justifyContent="spaceBetween"
  >
    <EuiFlexItem
      grow={false}
    >
      <EuiToolTip
        content="bytes"
        delay="regular"
        disableScreenReaderOutput={false}
        display="inlineBlock"
        position="top"
        title="Symbol size"
      >
        <EuiText
          className="eui-textTruncate"
          size="xs"
          style={
            Object {
              "maxWidth": "180px",
            }
          }
        >
          <small>
            <strong>
              bytes
            </strong>
          </small>
        </EuiText>
      </EuiToolTip>
    </EuiFlexItem>
  </EuiFlexGroup>
  <svg
    height={21}
    xmlns="http://www.w3.org/2000/svg"
  >
    <MapMarker
      circleCenterX={8}
      circleCenterY={19}
      circleStyle={
        Object {
          "fillOpacity": 0,
          "strokeWidth": 1,
        }
      }
      circleTopY={18}
      formattedValue="0KB"
      onWidthChange={[Function]}
      radius={1}
      textOffset={5}
      textY={21}
    />
    <MapMarker
      circleCenterX={8}
      circleCenterY={13}
      circleStyle={
        Object {
          "fillOpacity": 0,
          "strokeWidth": 1,
        }
      }
      circleTopY={6}
      formattedValue="19KB"
      onWidthChange={[Function]}
      radius={7}
      textOffset={5}
      textY={11}
    />
  </svg>
</div>
`;

exports[`Should render max label with std clamp notification 1`] = `
<div>
  <EuiFlexGroup
    gutterSize="xs"
    justifyContent="spaceBetween"
  >
    <EuiFlexItem
      grow={false}
    >
      <EuiToolTip
        content="bytes"
        delay="regular"
        disableScreenReaderOutput={false}
        display="inlineBlock"
        position="top"
        title="Symbol size"
      >
        <EuiText
          className="eui-textTruncate"
          size="xs"
          style={
            Object {
              "maxWidth": "180px",
            }
          }
        >
          <small>
            <strong>
              bytes
            </strong>
          </small>
        </EuiText>
      </EuiToolTip>
    </EuiFlexItem>
  </EuiFlexGroup>
  <svg
    height={29}
    xmlns="http://www.w3.org/2000/svg"
  >
    <MapMarker
      circleCenterX={12}
      circleCenterY={17}
      circleStyle={
        Object {
          "fillOpacity": 0,
          "strokeWidth": 1,
        }
      }
      circleTopY={6}
      formattedValue="> 16KB"
      onWidthChange={[Function]}
      radius={11}
      textOffset={5}
      textY={11}
    />
  </svg>
</div>
`;
